--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,24 @@
-.idea
+.DS_Store
 node_modules
-*.iml
-target
+/dist
+
+
+# local env files
+.env.local
+.env.*.local
+
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Editor directories and files
+.idea
+.github
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
